--- a/styles/protfolio.css
+++ b/styles/protfolio.css
@@ -29,6 +29,7 @@ nav{
 nav > ul{
     display:flex;
     align-items: center;
+    margin: 0 200px;
 }
 nav li{
     list-style: none;
@@ -37,4 +38,16 @@ nav li{
 nav a{
     text-decoration: none;
     color:#474747;
+}
+/* header related styles */
+.header{
+    background-color: #fff8f3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profaile{
+    width: 500px;
 }
